# 201FinalProject

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.txt  miner.py  temp-miner.cpp
Assets/: logo.psd
BTC_Miner/: BTC_Miner  CMakeLists.txt  sha256.cpp  sha256.h  temp-miner.cpp
BTC_Miner/merkle/: README.md  merkle.cpp  merkle.h
Game/: Actor.cpp  Actor.h  AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  Game.vcxproj.filters.rej  Item.cpp  Item.h  LootBox.cpp  LootBox.h  Main.cpp  MoveComponent.cpp  MoveComponent.h  NormalLootBox.cpp  NormalLootBox.h  Paddle.cpp  Paddle.h  PaddleMove.cpp  PaddleMove.h  Player.cpp  Player.h  PrestigeLootBox.cpp  PrestigeLootBox.h  SpriteComponent.cpp  SpriteComponent.h  UltraLootBox.cpp  UltraLootBox.h
Game/Assets/: Level.txt
Game/Game-mac.xcodeproj/: project.pbxproj
Server/: HashAccept.java  PacketServer.java  UdpClient.java  database.sql  pyClient.py
Server/samples/: UdpServer.java
Test/: a.out  main.cpp
Virus/libcxx/: CMakeLists.txt
Virus/libcxx/src/: CMakeLists.txt  thread.cpp
Virus/src/: thread.cpp
Website/: logout.java
Website/Servlet/: Statistics.java  ValidateLogin.java  ValidateRegister.java
Website/Webpages/: HomePage.html  download.html  gameinfo.html  login.html  statistics.html
Website/myvir/: .classpath  .project
Website/myvir/WebContent/: HomePage.html  gameinfo.html  register.html  statistics.html
Website/myvir/src/: Statistics.java  ValidateRegister.java
Website/myvir0.3/: .classpath  .project  myvirus-79c5de9f2cce.json
Website/myvir0.3/src/main/java/: Statistics.java  ValidateLogin.java  ValidateRegister.java
Website/myvir0.3/src/main/webapp/: download.html  gameinfo.css  gameinfo.html  index.css  index.html  login.css  login.html  register.html  statistics.html
Website/myvir0.3/src/main/webapp/WEB-INF/: web.xml
libcxx/src/: CMakeLists.txt
llvm-project/libcxx/src/: thread.cpp
